--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy": "flyctl deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "flyctl logs",
-		"lint": "eslint ./client"
+		"lint": "eslint ."
   },
   "repository": {
     "type": "git",
