add end to end test to pipeline

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deploy": "flyctl deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "flyctl logs",
-		"lint": "eslint ."
+    "lint": "eslint .",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -31,7 +33,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "cypress": "^12.7.0",
     "eslint": "^8.31.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "nodemon": "^2.0.20"
   }
 }
