--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+	"engines" : { 
+    "node" : "16.14.1" 
+  },
   "name": "fullstackopen-phonebook",
   "version": "1.0.0",
   "description": "Full Stack Open course - Part 11",
